--- a/.github/workflows/anghabench-after-build.yml
+++ b/.github/workflows/anghabench-after-build.yml
@@ -45,7 +45,7 @@ jobs:
         sudo apt-get install -qqy \
           git curl wget unzip xz-utils pixz jq s3cmd ninja-build pkg-config \
           liblzma-dev zlib1g-dev libtinfo-dev build-essential \
-          libc6-dev:i386 libstdc++-*-dev:i386 g++-multilib
+          libc6-dev:i386 libstdc++-*-dev:i386 g++-multilib cmake
         python3 -m pip install requests
     - name: Build rellic against LLVM ${{ matrix.llvm }}
       run: |
