--- a/.github/workflows/anghabench-after-build.yml
+++ b/.github/workflows/anghabench-after-build.yml
@@ -20,7 +20,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: ${{ github.event.workflow_run.head_branch }}
         submodules: true
     # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
     - name: Extract branch name
@@ -45,7 +44,9 @@ jobs:
         sudo apt-get install -qqy \
           git curl wget unzip xz-utils pixz jq s3cmd ninja-build pkg-config \
           liblzma-dev zlib1g-dev libtinfo-dev build-essential \
-          libc6-dev:i386 libstdc++-*-dev:i386 g++-multilib cmake
+          libc6-dev:i386 libstdc++-*-dev:i386 g++-multilib
+        wget "https://github.com/Kitware/CMake/releases/download/v3.22.3/cmake-3.22.3-linux-$(uname -m).sh" && \
+          sudo /bin/bash cmake-*.sh --skip-license --prefix=/usr/local && rm cmake-*.sh
         python3 -m pip install requests
     - name: Build rellic against LLVM ${{ matrix.llvm }}
       run: |
