--- a/.github/workflows/anghabench-after-build.yml
+++ b/.github/workflows/anghabench-after-build.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        ref: ${{ github.event.workflow_run.head_branch }}
         submodules: true
     # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
     - name: Extract branch name
